waitlist-service issues resolved